--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,10 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
@@ -25,29 +26,44 @@
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "symfony/templating": "4.3.*",
+
+        "sidus/admin-bundle": "dev-v3.0-dev",
+        "sidus/datagrid-bundle": "dev-v3.0-dev",
+        "sidus/filter-bundle": "dev-v3.0-dev",
+        "cleverage/permission-bundle": "1.0.*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.3.*"
+        "symfony/web-server-bundle": "4.3.*",
+        "fzaninotto/faker": "1.8.*",
+        "sidus/doctrine-debug-bundle": "1.0.*"
     },
     "config": {
         "preferred-install": {
-            "*": "dist"
+            "cleverage/*": "source",
+            "sidus/*": "source"
         },
         "sort-packages": true
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Sidus\\AdminBundle\\": "vendor/sidus/admin-bundle",
+            "Sidus\\DataGridBundle\\": "vendor/sidus/datagrid-bundle",
+            "Sidus\\FilterBundle\\": "vendor/sidus/filter-bundle",
+            "Sidus\\BaseBundle\\": "vendor/sidus/base-bundle",
+            "CleverAge\\PermissionBundle\\": "vendor/cleverage/permission-bundle"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Tests\\": "tests/",
+            "Sidus\\DoctrineDebugBundle\\": "vendor/sidus/doctrine-debug-bundle"
         }
     },
     "replace": {
@@ -56,7 +72,8 @@
         "symfony/polyfill-iconv": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
+        "symfony/polyfill-php56": "*",
+        "symfony/symfony": "4.3.*"
     },
     "scripts": {
         "auto-scripts": {
