--- a/composer.json
+++ b/composer.json
@@ -2,46 +2,22 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.3",
+        "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "ext-intl": "*",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/expression-language": "4.3.*",
+        "ext-mbstring": "*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "4.3.*",
-        "symfony/framework-bundle": "4.3.*",
-        "symfony/http-client": "4.3.*",
-        "symfony/intl": "4.3.*",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
+        "symfony/monolog-bundle": "3.5.*",
         "symfony/orm-pack": "*",
-        "symfony/process": "4.3.*",
-        "symfony/security-bundle": "4.3.*",
-        "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "4.3.*",
-        "symfony/twig-bundle": "4.3.*",
-        "symfony/validator": "4.3.*",
-        "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*",
-        "symfony/templating": "4.3.*",
-
-        "sidus/base-bundle": "1.1.*",
-        "sidus/admin-bundle": "dev-v3.0-dev",
-        "sidus/datagrid-bundle": "dev-v3.0-dev",
-        "sidus/filter-bundle": "dev-v3.0-dev",
+        "fzaninotto/faker": "1.8.*",
+        "sidus/admin-bundle": "3.0.*",
         "cleverage/permission-bundle": "1.0.*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.3.*",
-        "fzaninotto/faker": "1.8.*",
         "sidus/doctrine-debug-bundle": "1.0.*"
     },
     "config": {
@@ -71,10 +47,11 @@
         "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-mbstring": "*",
+        "symfony/polyfill-php72": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*",
-        "symfony/symfony": "4.3.*"
+        "symfony/polyfill-php56": "*"
     },
     "scripts": {
         "auto-scripts": {
@@ -94,7 +71,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.3.*"
+            "require": "4.4.*"
         }
     }
 }
